------------------- Upcoming version 8.1 -----------------------------

------------------- Released version 8.0 -----------------------------

Major features:

- Add support to record CUDA NVTX instrumentation.
- Support compiler instrumentation even if compilers use different
  flags and different instrumentation interface per language (C, C++,
  Fortran). This applies to combinations where the C/C++ compilers are
  Clang-based but Fortran still support the traditions vendor's
  instrumentation only (e.g., Cray and Fujitsu).
  Intel's `-tcollect` instrumentation and compile-time filtering
  fades out. `-tcollect` is only used if no alternative is
  available. Usually `-finstrument-functions(-after-inlining)`
  serves as the replacement with classic/oneAPI compilers.
  Support for IBM XL older than version 11 was removed.
  Support for PGI compilers that don't support the
  `__cyg_profile_func` instrumentation API was removed.
- Support for recording AMD HIP activities. It requires an LLVM/Clang
  based compiler.
- Add support for MPI intercommunicators.
- Support OpenMP's tool interface OMPT for host events as a
  replacement for OPARI2 instrumentation. The OMPT adapter is
  considered experimental. To use OMPT as default OpenMP
  instrumentation, add `--enable-default=ompt` to your configure line.
  You may switch between OPARI2 and OMPT instrumentation using the
  `--thread=omp:opari2` and `--thread=omp:ompt` instrumentation
  options. Currently, recent Intel, AMD, and Clang compilers support
  the interface.
  In contrast to OPARI2, the `test_lock` and `test_nest_lock` routines
  cannot be handled by OMPT. The `atomic` construct isn't implemented.
  The new adapter handles the `taskgroup` construct, though.
  Source code locations usually point to the OpenMP construct. As an
  exception, implicit barriers for parallel regions point to the
  corresponding `parallel` construct.

Features and improvements:
